@@ -35,8 +35,7 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class EbayPipelineService {
 
-    // ponytail: fixed pool for I/O-bound Gemini calls — EC2 단일 vCPU에서도 병렬 HTTP 대기 가능
-    private static final ExecutorService EMBED_POOL = Executors.newFixedThreadPool(10);
+    private static final ExecutorService EMBED_POOL = Executors.newVirtualThreadPerTaskExecutor();
 
     private final EbaySearchPort ebaySearchPort;
     private final KeywordTranslationPort keywordTranslator;
@@ -166,6 +165,8 @@ public class EbayPipelineService {
         // eBay 스코어링 결과
         List<UnifiedCandidate> unified = new java.util.ArrayList<>();
         topScored.forEach(s -> unified.add(new UnifiedCandidate(toSimilarProduct(s.item(), s.score()), s.score())));
+        job.markEbayDone();
+        trySave(job);
 
         // 쿠팡 — 저장된 임베딩으로 Java 내 cosine sim 계산 (Gemini 호출 없음)
         try {
@@ -182,10 +183,13 @@ public class EbayPipelineService {
                                 "KRW", c.productUrl(), score, List.of()
                         ), score));
                     });
+            job.markCoupangDone();
             log.info("[파이프라인] 쿠팡 스코어링 완료");
         } catch (Exception e) {
+            job.markCoupangFailed();
             log.warn("[파이프라인] 쿠팡 조회 실패: {}", e.getMessage());
         }
+        trySave(job);
 
         // 자체 카탈로그 — 저장된 임베딩으로 Java 내 cosine sim 계산 (Gemini 호출 없음)
         try {
@@ -205,9 +209,12 @@ public class EbayPipelineService {
                                 "KRW", c.productUrl(), score, List.of()
                         ), score));
                     });
+            job.markCatalogDone();
         } catch (Exception e) {
+            job.markCatalogFailed();
             log.warn("[파이프라인] 자체 카탈로그 조회 실패: {}", e.getMessage());
         }
+        trySave(job);
 
         // 통합 랭킹 — 점수 내림차순 top MAX_RESULTS
         List<SimilarProduct> results = unified.stream()
